# cade

./: .cade-db.key  .cade-todo.md  .cade.todo.md  .gitignore  AGENTS.md  ARCHITECTURE.md  CADE-nvim-completions-plan-B.md  CADE-nvim-completions-plan.md  CADE_AUDIT.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  Caddyfile  Cargo.toml  Dockerfile  ENHANCEMENT_PLAN.md  IMPLEMENTATION_PLAN.md  IMPROVEMENT_PLAN.md  ISSUES_FOUND.md  LICENSE-APACHE  Modelfile  Modelfile_llama  NVIM_THEME_PLAN.md  PLAN.md  PLAN_CLIPBOARD_PASTE.md  PLAN_FUTURE_FRONTIERS.md  PLAN_OPENCODE_EMULATION.md  PLAN_RIG_INTEGRATION.md  PROPOSAL_SELF_UPDATE.md  README.md  README_FINAL.md  README_IMPROVED.md  RUST10X_AUDIT_2026-03-18.md  SECURITY.md  SECURITY_FIXES.md  VIEW_PORT_ISSUES.md  WINDOWS_SETUP.md  cade-knowledge.vlp  check_tools.sh  clippy_output.txt  (+107 more)
crates/cade-agent/: Cargo.toml
crates/cade-agent/benches/: dispatch_bench.rs
crates/cade-agent/src/: error.rs  lib.rs  moa.rs  routing.rs  routing_test.rs
crates/cade-agent/src/agent/: client.rs  mod.rs  session.rs  stagnation.rs  tools.rs
crates/cade-agent/src/backends/: docker.rs  local.rs  mod.rs  readonly.rs  ssh.rs  storage.rs  virtual_sandbox.rs
crates/cade-agent/src/mcp/: mod.rs
crates/cade-agent/src/plugins/: js_runtime.rs  mod.rs  wasm_runtime.rs
crates/cade-agent/src/subagents/: config.rs  coordinator.rs  evaluator.rs  mod.rs
crates/cade-agent/src/team/: config.rs  context.rs  discovery.rs  executor.rs  member.rs  mod.rs  mode.rs  task.rs
crates/cade-agent/src/tools/: ask.rs  bash.rs  bash_agent.rs  bash_permission.rs  catalog.rs  codeintel.rs  desktop.rs  file_lock.rs  fs.rs  fs_agent.rs  fs_test.rs  git_checkpoint.rs  isolation.rs  manager.rs  memory.rs  meta.rs  mod.rs  plan.rs  runtime.rs  search.rs  search_agent.rs  traits.rs
crates/cade-ai/: Cargo.toml
crates/cade-ai/src/: anthropic.rs  catalogue.rs  default_pricing.json  default_providers.json  error.rs  gemini.rs  its.rs  lib.rs  observability.rs  ollama.rs  openai.rs  prompt_cache.rs  provider_registry.rs  registry.rs  registry.rs.orig  rig_adapter.rs  router.rs  tests.rs  tokenizer.rs  types.rs  utils.rs  vcr.rs
crates/cade-ai/src/openai/: tests.rs
crates/cade-api-types/: Cargo.toml
crates/cade-api-types/src/: lib.rs
crates/cade-askpass/: Cargo.toml
crates/cade-askpass/src/: lib.rs  main.rs  protocol.rs  server.rs
crates/cade-askpass/tests/: socket_roundtrip.rs
crates/cade-cli/: Cargo.toml
crates/cade-cli/src/: error.rs  lib.rs
crates/cade-cli/src/cli/: args.rs  eval.rs  export_import.rs  headless.rs  mod.rs  package.rs  repl.rs  update.rs
crates/cade-cli/src/support/: text.rs
crates/cade-cli/src/ui/: app.rs  editor.rs  markdown.rs  markdown_test.rs  mod.rs  skills.rs
crates/cade-codeintel/: Cargo.toml
crates/cade-codeintel/src/: error.rs  index.rs  languages.rs  lib.rs  query.rs  repomap.rs  symbol.rs
crates/cade-core/: Cargo.toml
crates/cade-core/src/: agent_env.rs  askpass.rs  bootstrap_token.rs  error.rs  lib.rs  shell.rs  structured_patch.rs  tool_ids.rs
crates/cade-core/src/capabilities/: mod.rs
crates/cade-core/src/hooks/: mod.rs
crates/cade-core/src/permissions/: authority.rs  checks.rs  manager.rs  mod.rs  mod.rs.orig  mod.rs.rej  rules.rs  service.rs  tests.rs
crates/cade-core/src/resources/: context_files.rs  mod.rs  packages.rs  palette.rs  prompts.rs  themes.rs
crates/cade-core/src/settings/: hooks.rs  manager.rs  mod.rs  models.rs  resolver.rs  tests.rs
crates/cade-core/src/skills/: discovery.rs  mod.rs  parsing.rs  tests.rs  types.rs  watcher.rs
crates/cade-core/src/toolsets/: adapter.rs  mod.rs
crates/cade-desktop/: Cargo.toml
crates/cade-desktop/src/: error.rs  lib.rs
crates/cade-desktop/src/desktop/: capture.rs  control.rs  mod.rs  notify.rs  tray.rs
crates/cade-gui/: Cargo.toml  Trunk.toml  index.html
crates/cade-gui/src/: api.rs  app.rs  config.rs  gestures.rs  http_wasm.rs  lib.rs  login.rs  palette.rs  responsive.rs  session.rs  shortcuts.rs  sse.rs  storage.rs  theme.rs  types.rs
crates/cade-gui/src/app/: mod.rs  tasks.rs  views.rs
crates/cade-gui/src/components/: agents.rs  api_keys.rs  chat.rs  code.rs  dashboard.rs  login.rs  logs_page.rs  memory.rs  mod.rs  models_page.rs  providers.rs  settings.rs  sidebar.rs  stubs.rs  toast.rs  tools_page.rs  usage.rs
crates/cade-gui/src/session/: agents.rs  artifacts.rs  checkpoints.rs  context_breakdown.rs  conversations.rs  live_output.rs  memory_overlay.rs  messages.rs  mod.rs  overlays.rs  plan.rs  skills.rs  streaming.rs  subagents.rs  tests.rs  theme_update.rs  toasts.rs  tools_overlay.rs
crates/cade-gui/tests/: web_smoke.rs
crates/cade-ide-mcp/: Cargo.toml
crates/cade-ide-mcp/src/: adapter_channel.rs  channel.rs  lib.rs  protocol.rs  server.rs  state.rs  transport.rs
crates/cade-ide-mcp/tests/: e2e_tool_call.rs
crates/cade-mcp/: Cargo.toml
crates/cade-mcp/src/: error.rs  lib.rs  test_rmcp.rs  watcher.rs
crates/cade-plugin/: Cargo.toml
crates/cade-plugin/src/: error.rs  lib.rs  manifest.rs  marketplace.rs  registry.rs
crates/cade-reranker/: Cargo.toml
crates/cade-reranker/src/: config.rs  error.rs  lib.rs  model.rs  reranker.rs
crates/cade-sdk/: Cargo.toml
crates/cade-sdk/src/: client_sdk.rs  error.rs  lib.rs  rpc.rs  session.rs
crates/cade-server/: Cargo.toml  build.rs
crates/cade-server-bin/: Cargo.toml
crates/cade-server-bin/src/: main.rs
crates/cade-server/src/: lib.rs
crates/cade-server/src/server/: mod.rs  (+13 more)
crates/cade-store/: Cargo.toml
crates/cade-store/benches/: memory_bench.rs
crates/cade-store/src/: crypto.rs  error.rs  lib.rs
crates/cade-tui/: Cargo.toml
crates/cade-tui/src/: app.rs  autocomplete.rs  colors.rs  component.rs  editor.rs  editor_component.rs  icons.rs  lib.rs  lua_engine.rs  lua_ui.rs  markdown.rs  markdown_test.rs  mcp_picker.rs  menu.rs  mouse.rs  overlay.rs  overlay_component.rs  question.rs  session_tree.rs  signals.rs  skills.rs  slots.rs  subagent_tracker.rs  test_rich.rs
crates/cade-web/: Cargo.toml
crates/cade-web/src/: error.rs  fetch.rs  lib.rs  search.rs  tools.rs
(+499 files in other folders)
