[package]
name = "cade"
version = "0.1.0"
edition = "2021"
authors = ["Engr. Stephen Ezekwem <stephen.ezekwem@gmail.com>"]
description = "CADE — Coding AI assistant with Desktop Extensions"
license = "MIT OR Apache-2.0"
repository = "https://github.com/EzekTec-Inc/CADE"

[[bin]]
name = "cade"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# HTTP + Letta API
reqwest = { version = "0.12", features = ["json", "stream"] }
reqwest-eventsource = "0.6"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Terminal / REPL
crossterm = "0.28"
ratatui = "0.29"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Filesystem utilities
dirs = "5"
walkdir = "2"
globset = "0.4"
ignore = "0.4"

# Regex (Grep tool)
regex = "1"

# Env vars
dotenvy = "0.15"

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# Desktop Extensions
xcap = "0.8.2"                          # Screen capture (cross-platform)
image = "0.25"                          # Image resizing for screenshots
base64 = "0.22"                         # Base64-encode screenshots
notify-rust = "4"                       # OS desktop notifications
ksni = "0.2"                            # System tray (Linux/DBUS)

# Utilities
uuid = { version = "1", features = ["v4"] }
tempfile = "3"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
