[workspace]
members = [
    "crates/cade-core",
    "crates/cade-ai",
    "crates/cade-server",
    "crates/cade-desktop",
    "crates/cade-agent",
    "crates/cade-plugin",
    "crates/cade-sdk",
    "crates/cade-web",
    "crates/cade-tui",
    "crates/cade-mcp",
    "crates/cade-cli",
    ".", "crates/cade-ide-mcp", "crates/cade-store",          # root package — owns the two binaries
]
resolver = "3"

[workspace.dependencies]
# Async
tokio          = { version = "1", features = ["full"] }
tokio-stream   = { version = "0.1", features = ["sync"] }
futures        = "0.3"
async-stream   = "0.3"
async-trait    = "0.1"

# HTTP
reqwest        = { version = "0.12", features = ["json", "stream"] }
reqwest-eventsource = "0.6"

# Serialisation
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"

# Error handling
# -- Others
derive_more    = { version = "2", features = ["from", "display"] }

# Logging
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# CLI / TUI
clap           = { version = "4.5", features = ["derive", "env"] }
crossterm      = { version = "0.28", features = ["event-stream"] }
ratatui        = { version = "0.29", features = ["crossterm", "scrolling-regions"] }
unicode-width  = "0.2"
pulldown-cmark = "0.13"
syntect        = { version = "5", default-features = false, features = ["parsing", "plist-load", "regex-fancy", "default-syntaxes", "default-themes"] }
ansi-to-tui    = "7"

# Filesystem
dirs           = "5"
walkdir        = "2"
globset        = "0.4"
ignore         = "0.4"
notify         = "6.1"

# Misc utilities
uuid           = { version = "1", features = ["v4"] }
tempfile       = "3"
chrono         = { version = "0.4", features = ["serde"] }
regex          = "1"
dotenvy        = "0.15"
atty           = "0.2"
plist          = "1.7"
parking_lot    = "0.12"

# Crypto
aes-gcm        = "0.10"
pbkdf2         = { version = "0.12", features = ["simple"] }
sha2           = "0.10"
hmac           = "0.12"
getrandom      = "0.2"
machine-uid    = "0.3"
urlencoding    = "2.1"
url            = "2"

# Desktop
xcap           = "0.8.2"
image          = { version = "0.25", default-features = false, features = ["png"] }
base64         = "0.22"
notify-rust    = "4"

# Clipboard (image paste)
arboard        = "3"

# Server
axum           = { version = "0.7", features = ["macros"] }
tower-http     = { version = "0.5", features = ["cors", "trace"] }
rusqlite       = { version = "0.31" }

# MCP
rmcp           = { version = "0.2", features = [
    "client",
    "transport-child-process",
    "transport-io",
    "transport-sse-client",
    "transport-streamable-http-client",
    "__reqwest",
] }

[package]
name        = "cade"
version     = "0.2.0"
edition     = "2024"
authors     = ["Engr. Stephen Ezekwem <stephen.ezekwem@gmail.com>"]
description = "CADE — Coding AI assistant with Desktop Extensions"
license     = "MIT OR Apache-2.0"
repository  = "https://github.com/EzekTec-Inc/CADE"

[[bin]]
name = "cade"
path = "src/main.rs"

[[bin]]
name = "cade-server"
path = "src/bin/cade-server.rs"

[features]
default     = ["mcp"]
full        = ["desktop", "web", "mcp", "integration", "backend-docker", "backend-ssh"]
desktop     = ["cade-agent/desktop", "dep:cade-desktop"]
web         = ["cade-agent/web"]
mcp         = ["cade-agent/mcp"]
integration = ["dep:cade-sdk"]
backend-docker = ["cade-agent/backend-docker"]
backend-ssh = ["cade-agent/backend-ssh"]

[dependencies]
# -- Workspace crates
cade-core    = { path = "crates/cade-core" }
cade-ai      = { path = "crates/cade-ai" }
cade-server  = { path = "crates/cade-server" }
cade-store   = { path = "crates/cade-store" }
cade-desktop = { path = "crates/cade-desktop", optional = true }
cade-agent   = { path = "crates/cade-agent", default-features = false }
cade-cli     = { path = "crates/cade-cli" }
cade-sdk     = { path = "crates/cade-sdk", optional = true }
# -- Shared by both binaries
derive_more.workspace  = true
tokio.workspace        = true
tracing.workspace      = true
tracing-subscriber.workspace = true
clap.workspace         = true
serde_json.workspace   = true
dotenvy.workspace      = true
chrono.workspace       = true
atty.workspace         = true
dirs.workspace         = true
parking_lot.workspace  = true
# -- Used by cade-server binary (RouterAdapter)
async-trait.workspace  = true
tokio-stream.workspace = true
axum.workspace         = true
tower-http.workspace   = true
cade-tui = { version = "0.2.0", path = "crates/cade-tui" }
ratatui.workspace = true
rmcp.workspace = true

[dev-dependencies]
tokio-test = "0.4"

[lints.rust]
unsafe_code = "forbid"
# unused = { level = "allow", priority = -1 } # For exploratory dev.

[profile.dev]
opt-level = 0
debug = 1

[profile.dev.package."*"]
opt-level = 1

[profile.release]
opt-level       = 3
lto             = "thin"
strip           = true
panic           = "abort"
