[workspace]
members = [
    "crates/cade-core",
    "crates/cade-ai",
    "crates/cade-api-types",
    "crates/cade-server",
    "crates/cade-desktop",
    "crates/cade-agent",
    "crates/cade-plugin",
    "crates/cade-sdk",
    "crates/cade-web",
    "crates/cade-tui",
    "crates/cade-gui",
    "crates/cade-mcp",
    "crates/cade-cli",
    ".", "crates/cade-ide-mcp", "crates/cade-store",          # root package — owns the two binaries
    "crates/cade-askpass",
]
resolver = "3"

[workspace.dependencies]
# Async
tokio          = { version = "1", features = ["full"] }
tokio-stream   = { version = "0.1", features = ["sync"] }
futures        = "0.3"
async-stream   = "0.3"
async-trait    = "0.1"

# HTTP
reqwest        = { version = "0.12", features = ["json", "stream"] }
reqwest-eventsource = "0.6"

# Serialisation
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"

# Error handling
# -- Others
derive_more    = { version = "2", features = ["from", "display"] }

# Logging
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# CLI / TUI
clap           = { version = "4.5", features = ["derive", "env"] }
crossterm      = { version = "0.29", features = ["event-stream"] }
ratatui        = { version = "0.30", features = ["crossterm", "scrolling-regions"] }
indicatif      = "0.18"
unicode-width  = "0.2"
pulldown-cmark = "0.13"
syntect        = { version = "5", default-features = false, features = ["parsing", "plist-load", "regex-fancy", "default-syntaxes", "default-themes"] }
ansi-to-tui    = "8"

# Filesystem
dirs           = "6"
walkdir        = "2"
globset        = "0.4"
ignore         = "0.4"
notify         = "8"

# Misc utilities
uuid           = { version = "1", features = ["v4"] }
tempfile       = "3"
chrono         = { version = "0.4", features = ["serde"] }
regex          = "1"
dotenvy        = "0.15"
plist          = "1.7"
parking_lot    = "0.12"

# Crypto
aes-gcm        = "0.10"
pbkdf2         = { version = "0.13" }
argon2         = "0.5"
sha2           = "0.11"
hmac           = "0.13"
getrandom      = { version = "0.4", features = ["wasm_js"] }
machine-uid    = "0.6"
urlencoding    = "2.1"
url            = "2"

# Desktop
xcap           = "0.9"
image          = { version = "0.25", default-features = false, features = ["png"] }
base64         = "0.22"
notify-rust    = "4"

# Clipboard (image paste)
arboard        = "3"

# Server
axum           = { version = "0.8", features = ["macros"] }
tower-http     = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }
rusqlite       = { version = "0.39" }
r2d2           = "0.8"
r2d2_sqlite    = "0.34"

# Embeddings (feature-gated in cade-store)
fastembed      = "5"
sqlite-vec     = "0.1"
zerocopy       = { version = "0.8", features = ["derive"] }

# Rig Core Compatibility
rig-core       = "0.6.0"

# MCP
rmcp           = { version = "1.7", features = [
    "client",
    "server",
    "macros",
    "transport-child-process",
    "transport-io",
    "transport-streamable-http-client",
    "transport-streamable-http-client-reqwest",
    "reqwest-native-tls",
] }
schemars       = "1"

[package]
name        = "cade"
version     = "0.2.4"
edition     = "2024"
authors     = ["Engr. Stephen Ezekwem <stephen.ezekwem@gmail.com>"]
description = "CADE — Coding AI assistant with Desktop Extensions"
license     = "MIT OR Apache-2.0"
repository  = "https://github.com/EzekTec-Inc/CADE"

[[bin]]
name = "cade"
path = "src/main.rs"

[[bin]]
name = "cade-server"
path = "src/bin/cade-server.rs"

[features]
default     = ["mcp"]
full        = ["desktop", "web", "mcp", "integration", "backend-docker", "backend-ssh"]
desktop     = ["cade-agent/desktop", "dep:cade-desktop"]
web         = ["cade-agent/web"]
mcp         = ["cade-agent/mcp"]
integration = ["dep:cade-sdk"]
backend-docker = ["cade-agent/backend-docker"]
backend-ssh = ["cade-agent/backend-ssh"]
# WI-SEMANTIC: opt-in semantic search. Forwards to cade-store/semantic-search
# which pulls fastembed + sqlite-vec. Default builds DO NOT activate this.
semantic-search = ["cade-store/semantic-search"]

# Rig compatibility feature gate
rig-compat = ["cade-ai/rig-compat", "cade-store/rig-compat"]

[dependencies]
# -- Workspace crates
cade-core    = { path = "crates/cade-core" }
cade-ai      = { path = "crates/cade-ai" }
cade-server  = { path = "crates/cade-server" }
cade-store   = { path = "crates/cade-store" }
cade-desktop = { path = "crates/cade-desktop", optional = true }
cade-agent   = { path = "crates/cade-agent", default-features = false }
cade-cli     = { path = "crates/cade-cli" }
cade-mcp     = { path = "crates/cade-mcp" }
cade-sdk     = { path = "crates/cade-sdk", optional = true }
# -- Shared by both binaries
derive_more.workspace  = true
tokio.workspace        = true
tracing.workspace      = true
tracing-subscriber.workspace = true
clap.workspace         = true
serde_json.workspace   = true
dotenvy.workspace      = true
chrono.workspace       = true
dirs.workspace         = true
parking_lot.workspace  = true
uuid.workspace         = true
# -- Used by cade-server binary (RouterAdapter)
async-trait.workspace  = true
tokio-stream.workspace = true
axum.workspace         = true
tower-http.workspace   = true
cade-tui = { version = "0.2.4", path = "crates/cade-tui" }
cade-askpass = { path = "crates/cade-askpass", features = ["server"] }
ratatui.workspace = true
indicatif.workspace = true
rmcp.workspace = true
lru = "0.18"
mlua = "0.11.6"
dashmap = "6.2.1"

[dev-dependencies]
tokio-test = "0.4"

[lints.rust]
unsafe_code = "forbid"
# unused = { level = "allow", priority = -1 } # For exploratory dev.

[profile.dev]
opt-level = 0
debug = 1

[profile.dev.package."*"]
opt-level = 1

[profile.release]
opt-level       = 3
lto             = "thin"
strip           = true
panic           = "unwind"
