[package]
name        = "cade-agent"
version = "0.2.4"
edition     = "2024"

[lib]
doctest     = false

[features]
default = ["desktop", "web", "mcp", "backend-docker", "backend-ssh"]
desktop = ["dep:cade-desktop"]
web     = ["dep:cade-web"]
mcp     = ["dep:cade-mcp"]
backend-docker = []
backend-ssh = []
plugin-js  = ["dep:rquickjs", "dep:glob"]
plugin-wasm = ["dep:wasmtime", "dep:wasmtime-wasi"]

[dependencies]
# -- Workspace crates
cade-core.path    = "../cade-core"
cade-desktop = { path = "../cade-desktop", optional = true }
cade-mcp     = { path = "../cade-mcp", optional = true }
cade-web     = { path = "../cade-web", optional = true }
# -- Error handling
# -- Others
derive_more.workspace  = true
# -- Serialisation
serde.workspace        = true
serde_json.workspace   = true
# -- Logging
tracing.workspace      = true
# -- Async
tokio.workspace        = true
tokio-stream.workspace = true
futures.workspace      = true
async-trait.workspace  = true
# -- HTTP
reqwest.workspace      = true
reqwest-eventsource.workspace = true
# -- Misc utilities
uuid.workspace         = true
chrono.workspace       = true
tempfile.workspace     = true
regex.workspace        = true
base64.workspace       = true
urlencoding.workspace = true
# -- Filesystem
globset.workspace      = true
ignore.workspace       = true
walkdir.workspace      = true
dirs.workspace         = true
# -- Plugin runtimes (optional, feature-gated)
rquickjs      = { version = "0.12", optional = true, default-features = false, features = ["macro", "parallel"] }
wasmtime      = { version = "29", optional = true, default-features = false }
wasmtime-wasi = { version = "29", optional = true }
glob          = { version = "0.3", optional = true }

[lints.rust]
unsafe_code = "forbid"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["async_tokio"] }
# unused = { level = "allow", priority = -1 } # For exploratory dev.


[[bench]]
name = "dispatch_bench"
harness = false
