[package]
name = "cade-ai"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

[dependencies]
anyhow.workspace       = true
thiserror.workspace    = true
serde.workspace        = true
serde_json.workspace   = true
tracing.workspace      = true
tokio.workspace        = true
tokio-stream.workspace = true
futures.workspace      = true
async-stream.workspace = true
async-trait.workspace  = true
reqwest.workspace      = true
reqwest-eventsource.workspace = true
uuid.workspace         = true

[lints.rust]
unsafe_code = "forbid"
