[package]
name = "cade-ai"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

[dependencies]
# -- Error handling
anyhow.workspace       = true
thiserror.workspace    = true
# -- Others
derive_more.workspace  = true
# -- Serialisation
serde.workspace        = true
serde_json.workspace   = true
# -- Logging
tracing.workspace      = true
# -- Async
tokio.workspace        = true
tokio-stream.workspace = true
futures.workspace      = true
async-stream.workspace = true
async-trait.workspace  = true
# -- HTTP
reqwest.workspace      = true
reqwest-eventsource.workspace = true
# -- Misc utilities
uuid.workspace         = true

[lints.rust]
unsafe_code = "forbid"
# unused = { level = "allow", priority = -1 } # For exploratory dev.
