[package]
name = "cade-ai"
version = "2.2.0"
edition = "2024"

[lib]
doctest = false

[dependencies]
# -- Error handling
# -- Others
derive_more.workspace  = true
# -- Serialisation
serde.workspace        = true
serde_json.workspace   = true
# -- Logging
tracing.workspace      = true
# -- Async
tokio.workspace        = true
tokio-stream.workspace = true
futures.workspace      = true
async-stream.workspace = true
async-trait.workspace  = true
# -- HTTP
reqwest.workspace      = true
reqwest-eventsource.workspace = true
# -- Misc utilities
uuid.workspace         = true
parking_lot.workspace  = true
# -- Token counting (P2-1).  BPE tokenizer matching OpenAI cl100k_base /
# o200k_base.  Used by `cade_ai::token_count` to size context windows
# accurately instead of the legacy ~3-chars/token estimate.  For Anthropic
# and other providers without a public Rust tokenizer we fall back to the
# closest cl100k_base/o200k_base encoder, which over-counts by ~5–10 % for
# Claude — safe direction (the budget is conservative, not aggressive).
tiktoken-rs            = "0.11"
once_cell              = "1.20"

[dev-dependencies]
tempfile.workspace = true

[lints.rust]
unsafe_code = "forbid"
# unused = { level = "allow", priority = -1 } # For exploratory dev.
