[package]
name        = "cade-cli"
version     = "0.2.0"
edition     = "2024"

[lib]
doctest     = false

[dependencies]
# -- Workspace crates
cade-core.path    = "../cade-core"
cade-agent.path   = "../cade-agent"
cade-ai.path      = "../cade-ai"
cade-tui.path     = "../cade-tui"
# -- Error handling
# -- Others
derive_more.workspace  = true
# -- Serialisation
serde.workspace        = true
serde_json.workspace   = true
# -- Logging
tracing.workspace      = true
# -- Async
tokio.workspace        = true
futures.workspace      = true
# -- HTTP
reqwest.workspace      = true
# -- Misc utilities
uuid.workspace         = true
chrono.workspace       = true
tempfile.workspace     = true
# -- CLI / TUI
crossterm.workspace    = true
ratatui.workspace      = true
clap.workspace         = true
# -- Filesystem
dirs.workspace         = true
walkdir.workspace      = true
ignore.workspace       = true
notify.workspace       = true

[lints.rust]
unsafe_code = "forbid"
# unused = { level = "allow", priority = -1 } # For exploratory dev.
