[package]
name        = "cade-cli"
version = "0.2.4"
edition     = "2024"

[lib]
doctest     = false

[dependencies]
# -- Workspace crates
cade-core.path    = "../cade-core"
cade-agent = { path = "../cade-agent", default-features = false, features = ["mcp"] }
cade-ai.path      = "../cade-ai"
cade-askpass = { path = "../cade-askpass", features = ["server"] }
cade-tui.path     = "../cade-tui"
# -- Error handling
# -- Others
derive_more.workspace  = true
# -- Serialisation
serde.workspace        = true
serde_json.workspace   = true
# -- Logging
tracing.workspace      = true
# -- Async
tokio.workspace        = true
futures.workspace      = true
reqwest = { workspace = true, features = ["json"] }
# -- Misc utilities
uuid.workspace         = true
chrono.workspace       = true
tempfile.workspace     = true
parking_lot.workspace  = true
base64.workspace       = true
arboard = { workspace = true, optional = true }

# -- CLI / TUI
crossterm.workspace    = true
ratatui.workspace      = true
clap.workspace         = true
opaline = { version = "0.4", features = ["ratatui", "builtin-themes"] }
# -- Filesystem
dirs.workspace         = true
walkdir.workspace      = true
ignore.workspace       = true
notify.workspace       = true
cade-plugin = { version = "0.2.4", path = "../cade-plugin" }
mlua = { version = "0.11.6", features = ["lua54", "vendored", "serialize", "send"] }
self_update = { version = "0.44.0", features = ["archive-tar", "compression-flate2", "rustls"] }

[lints.rust]
unsafe_code = "forbid"
# unused = { level = "allow", priority = -1 } # For exploratory dev.

[features]
clipboard-images = ["arboard"]
