[package]
name        = "cade-codeintel"
version     = "0.2.0"
edition     = "2024"

[lib]
doctest = false

[dependencies]
# -- Workspace crates
cade-core.path = "../cade-core"
# -- Error handling
derive_more.workspace = true
# -- Serialisation
serde.workspace      = true
serde_json.workspace = true
# -- Logging
tracing.workspace    = true
# -- Async
tokio.workspace      = true
# -- Filesystem
walkdir.workspace    = true
ignore.workspace     = true
# -- Database (shared with cade-server via Arc<Mutex<Connection>>)
rusqlite.workspace   = true
# -- Misc
uuid.workspace       = true
chrono.workspace     = true
regex.workspace      = true

# -- Tree-sitter core (match the version used by 0.21 language grammars)
tree-sitter = "0.22"

# -- Language grammars (optional features keep compile times short)
[features]
default = ["lang-rust", "lang-python", "lang-javascript"]
lang-rust       = ["dep:tree-sitter-rust"]
lang-python     = ["dep:tree-sitter-python"]
# tree-sitter-typescript 0.23 uses the tree-sitter-language wrapper crate which
# is not directly compatible with tree-sitter 0.22 Language pointers without
# unsafe transmute. Disabled until an official adapter exists.
# lang-typescript = ["dep:tree-sitter-typescript"]
lang-javascript = ["dep:tree-sitter-javascript"]
lang-go         = ["dep:tree-sitter-go"]

[dependencies.tree-sitter-rust]
version  = "0.21"
optional = true

[dependencies.tree-sitter-python]
version  = "0.21"
optional = true

[dependencies.tree-sitter-typescript]
version  = "0.23"
optional = true

[dependencies.tree-sitter-javascript]
version  = "0.21"
optional = true

[dependencies.tree-sitter-go]
version  = "0.21"
optional = true

[lints.rust]
# tree-sitter FFI requires unsafe for cross-version pointer conversion
# unsafe_code = "forbid"
# unused = { level = "allow", priority = -1 } # For exploratory dev.
