[package]
name        = "cade-core"
version     = "0.2.0"
edition     = "2024"

[lib]
doctest     = false

[dependencies]
# -- Error handling
anyhow.workspace     = true
thiserror.workspace  = true
# -- Serialisation
serde.workspace      = true
serde_json.workspace = true
# -- Logging
tracing.workspace    = true
# -- Async
tokio.workspace      = true
# -- Filesystem
dirs.workspace       = true
walkdir.workspace    = true
globset.workspace    = true
ignore.workspace     = true
notify.workspace     = true
# -- Misc utilities
regex.workspace      = true
chrono.workspace     = true
uuid.workspace       = true
dotenvy.workspace    = true
# -- HTTP
reqwest.workspace    = true

[dev-dependencies]
tempfile.workspace   = true

[lints.rust]
unsafe_code = "forbid"
