[package]
name        = "cade-core"
version     = "0.2.0"
edition     = "2024"

[lib]
doctest     = false

[dependencies]
# -- Error handling
# -- Others
derive_more.workspace = true
# -- Serialisation
serde.workspace      = true
serde_json.workspace = true
# -- Logging
tracing.workspace    = true
# -- Async
tokio.workspace      = true
# -- Filesystem
dirs.workspace       = true
walkdir.workspace    = true
globset.workspace    = true
ignore.workspace     = true
notify.workspace     = true
# -- Misc utilities
regex.workspace      = true
chrono.workspace     = true
uuid.workspace       = true
dotenvy.workspace    = true
plist.workspace      = true
# -- HTTP
reqwest.workspace    = true

[dev-dependencies]
tempfile.workspace   = true

[lints.rust]
unsafe_code = "forbid"
# unused = { level = "allow", priority = -1 } # For exploratory dev.
