[package]
name        = "cade-core"
version     = "2.2.1"
edition     = "2024"

[lib]
doctest     = false

[features]
default = ["http"]
http    = ["dep:reqwest"]

[dependencies]
# -- Error handling
# -- Others
derive_more.workspace = true
# -- Serialisation
serde.workspace      = true
serde_json.workspace = true
# -- Logging
tracing.workspace    = true
# -- Async (common)
tokio = { version = "1", default-features = false, features = ["sync", "time", "macros", "io-util"] }
# -- Filesystem
dirs.workspace       = true
walkdir.workspace    = true
globset.workspace    = true
ignore.workspace     = true
# -- Misc utilities
regex.workspace      = true
chrono.workspace     = true
uuid.workspace       = true
dotenvy.workspace    = true
plist.workspace      = true
parking_lot.workspace = true
# -- Random (bootstrap tokens)
getrandom.workspace  = true
# -- HTTP (optional — only used by skill installation)
reqwest = { workspace = true, optional = true }
opaline = { version = "0.4", features = ["ratatui", "egui", "builtin-themes"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
notify.workspace = true
tokio = { version = "1", default-features = false, features = ["process", "rt"] }

[dev-dependencies]
tempfile.workspace   = true

[lints.rust]
unsafe_code = "forbid"
# unused = { level = "allow", priority = -1 } # For exploratory dev.
