[package]
name        = "cade-desktop"
version     = "0.2.0"
edition     = "2024"

[lib]
doctest     = false

[dependencies]
# -- Workspace crates
cade-core.path       = "../cade-core"
# -- Error handling
# -- Others
derive_more.workspace = true
# -- Logging
tracing.workspace    = true
# -- Serialisation
serde_json.workspace = true
# -- Async
tokio.workspace      = true
# -- Desktop
xcap.workspace       = true
notify-rust.workspace = true
base64.workspace     = true
image.workspace      = true
enigo = "0.6.1"
active-win-pos-rs = "0.10.0"
tray-icon = "0.21.3"

[lints.rust]
unsafe_code = "forbid"
# unused = { level = "allow", priority = -1 } # For exploratory dev.
