[package]
name        = "cade-desktop"
version = "2.3.0"
edition     = "2024"

[lib]
doctest     = false

[features]
default     = ["input-control"]
input-control = ["dep:enigo"]

[dependencies]
# -- Workspace crates
cade-core.path       = "../cade-core"
# -- Error handling
# -- Others
derive_more.workspace = true
# -- Logging
tracing.workspace    = true
# -- Serialisation
serde_json.workspace = true
# -- Async
tokio.workspace      = true
# -- Desktop: screenshots + notifications
xcap.workspace       = true
notify-rust.workspace = true
base64.workspace     = true
image.workspace      = true
# -- Desktop: input control (optional — heavy dep tree)
enigo = { version = "0.6.1", optional = true }

[lints.rust]
unsafe_code = "forbid"
# unused = { level = "allow", priority = -1 } # For exploratory dev.
