[package]
name        = "cade-gui"
version     = "2.3.0"
edition     = "2024"
description = "CADE — web GUI (WASM) served by cade-server at /dashboard"
license     = "MIT OR Apache-2.0"

[lib]
crate-type  = ["rlib", "cdylib"]
doctest     = false

[dependencies]
cade-api-types       = { path = "../cade-api-types" }
cade-core            = { path = "../cade-core", default-features = false }
serde.workspace      = true
serde_json.workspace = true
urlencoding.workspace = true
wasm-bindgen         = "0.2"

# Dioxus for full responsive HTML/CSS UI
dioxus = { version = "0.5", features = ["web"] }

[lints.rust]
unsafe_code = "forbid"
