[package]
name        = "cade-gui"
version     = "0.2.4"
edition     = "2024"
description = "CADE — web GUI (WASM) served by cade-server at /dashboard"
license     = "MIT OR Apache-2.0"

[lib]
crate-type  = ["rlib", "cdylib"]
doctest     = false

[dependencies]
cade-api-types       = { path = "../cade-api-types" }
cade-core            = { path = "../cade-core", default-features = false }
serde.workspace      = true
serde_json.workspace = true
urlencoding.workspace = true
wasm-bindgen         = "0.2"
wasm-bindgen-futures = "0.4"
js-sys               = "0.3"
web-sys              = { version = "0.3", features = ["Window", "Request", "RequestInit", "RequestMode", "Response", "Headers", "ReadableStream", "ReadableStreamDefaultReader", "TextDecoder"] }
gloo-timers          = { version = "0.2", features = ["futures"] }

# Dioxus for full responsive HTML/CSS UI
dioxus = { version = "0.5", features = ["web"] }

# -- Browser-specific dependencies for random sources
[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid                 = { version = "1", features = ["js", "v4"] }
getrandom            = { version = "0.2", features = ["js"] }

[lints.rust]
unsafe_code = "forbid"
