[package]
name        = "cade-ide-mcp"
version     = "0.1.0"
edition     = "2024"
description = "CADE IDE MCP bridge — editor integration over Model Context Protocol"
license     = "MIT OR Apache-2.0"

[lib]
name = "cade_ide_mcp"
path = "src/lib.rs"

[[bin]]
name = "cade-ide-mcp"
path = "src/bin/cade-ide-mcp.rs"

[dependencies]
rmcp.workspace       = true
schemars.workspace   = true
serde.workspace      = true
serde_json.workspace = true
tokio.workspace      = true
tracing.workspace    = true
tracing-subscriber.workspace = true

[lints.rust]
unsafe_code = "forbid"
