[package]
name        = "cade-mcp"
version     = "0.2.0"
edition     = "2024"

[lib]
doctest     = false

[dependencies]
# -- Workspace crates
cade-core.path       = "../cade-core"
# -- Error handling
# -- Others
derive_more.workspace  = true
# -- Serialisation
serde_json.workspace   = true
# -- Logging
tracing.workspace      = true
# -- Async
tokio.workspace        = true
# -- MCP
rmcp.workspace         = true
# -- Filesystem
notify.workspace       = true
dirs.workspace         = true

[lints.rust]
unsafe_code = "forbid"
# unused = { level = "allow", priority = -1 } # For exploratory dev.
