[package]
name        = "cade-mcp"
version = "0.2.4"
edition     = "2024"

[lib]
doctest     = false

[dependencies]
# -- Workspace crates
cade-core.path       = "../cade-core"
# -- Error handling
# -- Others
derive_more.workspace  = true
# -- Serialisation
serde.workspace        = true
serde_json.workspace = true
# -- Logging
tracing.workspace      = true
tokio = { workspace = true, features = ["full"] }
# -- MCP
rmcp.workspace         = true
http = "1"
# -- Filesystem
notify.workspace       = true
dirs.workspace         = true

[lints.rust]
unsafe_code = "forbid"
# unused = { level = "allow", priority = -1 } # For exploratory dev.
