[package]
name        = "cade-plugin"
version     = "0.2.0"
edition     = "2024"

[lib]
doctest = false

[dependencies]
# -- Workspace crates
cade-core.path  = "../cade-core"
cade-agent = { path = "../cade-agent", default-features = false, features = ["mcp"] }
# -- Error handling
derive_more.workspace = true
# -- Serialisation
serde.workspace      = true
serde_json.workspace = true
# -- Logging
tracing.workspace    = true
# -- Async
tokio.workspace      = true
# -- Filesystem
dirs.workspace       = true
walkdir.workspace    = true
# -- Misc utilities
uuid.workspace       = true
reqwest.workspace = true
tar = "0.4.45"
flate2 = "1.1.9"

[lints.rust]
unsafe_code = "forbid"
# unused = { level = "allow", priority = -1 } # For exploratory dev.
