[package]
name        = "cade-sdk"
version = "2.3.0"
edition     = "2024"

[lib]
doctest = false

[dependencies]
# -- Workspace crates
cade-core.path  = "../cade-core"
cade-agent = { path = "../cade-agent", default-features = false, features = ["mcp"] }
# -- Error handling
derive_more.workspace = true
# -- Serialisation
serde.workspace      = true
serde_json.workspace = true
# -- Logging
tracing.workspace    = true
# -- Async
tokio.workspace      = true
futures.workspace    = true
# -- Misc
uuid.workspace       = true
dirs.workspace       = true

[lints.rust]
unsafe_code = "forbid"
# unused = { level = "allow", priority = -1 } # For exploratory dev.
